corrected overlapping styles, addjuste all compontents from sidebar to render inside MainContent.js

--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,8 @@
   justify-content: flex-start;
   box-sizing: border-box;
   margin-left: 270px; /* Adjusted to match sidebar width */
-  margin-top: 12px; /* Ensure content is below navbar */
+  margin-top: 70px; /* Ensure content is below navbar */
+  margin-right: 6px;
 }
 
 /* Responsive adjustments */
