--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,6 +1,6 @@
 /* src/components/Navbar.css */
 .navbar {
-  width: 97.5%;
+  width: 90.1%;
   background-color: #ffffff;
   display: flex;
   justify-content: space-between;
